[tool.poetry]
name = "obenkyo-chan"
version = "0.1.0"
description = "Obenkyo cards bot"
authors = ["ScriptHound <grinkiko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.5.5"
SQLAlchemy = "^1.3.23"
psycopg2 = "^2.8.6"
dotenv = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
